feat(hashtags): new top 10 hashtags function

--- a/main.ipynb
+++ b/main.ipynb
@@ -724,6 +724,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pregunta 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#FarmersProtest              406613\n",
+       "#IStandWithFarmers            15783\n",
+       "#farmersprotest               15458\n",
+       "#IndianFarmersHumanRights     12019\n",
+       "#FarmersAreIndia              11043\n",
+       "                              ...  \n",
+       "#msnbc                            1\n",
+       "#Discordpokemon                   1\n",
+       "#amrindersingh                    1\n",
+       "#WorldIsFamily                    1\n",
+       "#gmbhirisnotgmabhir               1\n",
+       "Name: content, Length: 40776, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from top10Hashtags import top_10_hashtags\n",
+    "\n",
+    "top_10_hashtags(df)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
