--- a/main.ipynb
+++ b/main.ipynb
@@ -20,12 +20,153 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pregunta 1"
+    "A continuación se presentará la función main donde se podrán ejecutar las distintas funciones según el input que se ingrese. Sin embargo, más adelante se encontrarán bloques con las funciones solas por si se quiere ejecutarlas aparte."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Funciones\n",
+      "1. Top 10 Retweeted\n",
+      "2. Top 10 Usuarios\n",
+      "3. Top 10 Fechas\n",
+      "4. Top 10 Hashtags\n",
+      "0. Salir\n",
+      "Ingrese el número de la función que desee ejecutar (presione 0 para salir): 4\n",
+      "#FarmersProtest              406613\n",
+      "#IStandWithFarmers            15783\n",
+      "#farmersprotest               15458\n",
+      "#IndianFarmersHumanRights     12019\n",
+      "#FarmersAreIndia              11043\n",
+      "#StandWithFarmers             10645\n",
+      "#Rihanna                       9117\n",
+      "#FarmersProtests               8750\n",
+      "#Farmers                       6561\n",
+      "#shameonbollywood              6270\n",
+      "Name: content, dtype: int64\n",
+      "\n",
+      "Funciones\n",
+      "1. Top 10 Retweeted\n",
+      "2. Top 10 Usuarios\n",
+      "3. Top 10 Fechas\n",
+      "4. Top 10 Hashtags\n",
+      "0. Salir\n",
+      "Ingrese el número de la función que desee ejecutar (presione 0 para salir): 3\n",
+      "          days  number_of_tweets\n",
+      "2   2021-02-03             83866\n",
+      "3   2021-02-04             58607\n",
+      "4   2021-02-05             33332\n",
+      "1   2021-02-02             28548\n",
+      "5   2021-02-06             22420\n",
+      "6   2021-02-07             11325\n",
+      "8   2021-02-09              9320\n",
+      "7   2021-02-08              8920\n",
+      "9   2021-02-10              7973\n",
+      "10  2021-02-11              5698\n",
+      "\n",
+      "Funciones\n",
+      "1. Top 10 Retweeted\n",
+      "2. Top 10 Usuarios\n",
+      "3. Top 10 Fechas\n",
+      "4. Top 10 Hashtags\n",
+      "0. Salir\n",
+      "Ingrese el número de la función que desee ejecutar (presione 0 para salir): 2\n",
+      "              username  number_of_tweets\n",
+      "64533  harjot_tweeting              7134\n",
+      "89538    tasveersandhu              2091\n",
+      "85831  shells_n_petals              1991\n",
+      "70262           jot__b              1841\n",
+      "82110    rebelpacifist              1806\n",
+      "83100         rumsomal              1722\n",
+      "19757      Iamjazzie96              1502\n",
+      "22292         Jass_k_G              1460\n",
+      "12024  DigitalKisanBot              1453\n",
+      "93313    z_khalique007              1446\n",
+      "\n",
+      "Funciones\n",
+      "1. Top 10 Retweeted\n",
+      "2. Top 10 Usuarios\n",
+      "3. Top 10 Fechas\n",
+      "4. Top 10 Hashtags\n",
+      "0. Salir\n",
+      "Ingrese el número de la función que desee ejecutar (presione 0 para salir): 1\n",
+      "                                                  content  retweetCount\n",
+      "408128  why aren’t we talking about this?! #FarmersPro...        315547\n",
+      "395142  We stand in solidarity with the #FarmersProtes...        103957\n",
+      "266196  I still #StandWithFarmers and support their pe...         67694\n",
+      "366579  “Paid actors,” huh? Quite the casting director...         35921\n",
+      "372793  What in the human rights violations is going o...         26972\n",
+      "314192  Happy to share that I’ve donated $10,000 to pr...         23251\n",
+      "215034  There has been much social media coverage arou...         20132\n",
+      "398011  Farmers feed the world. Fight for them. Protec...         18744\n",
+      "325261  Should be talking about this! #FarmersProtest\\...         17368\n",
+      "163689  To all of my influencer/celeb friends- read up...         15677\n",
+      "\n",
+      "Funciones\n",
+      "1. Top 10 Retweeted\n",
+      "2. Top 10 Usuarios\n",
+      "3. Top 10 Fechas\n",
+      "4. Top 10 Hashtags\n",
+      "0. Salir\n",
+      "Ingrese el número de la función que desee ejecutar (presione 0 para salir): 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from top10Retweeted import top_10_retweeted\n",
+    "from top10Users import top_10_users\n",
+    "from top10Dates import top_10_dates\n",
+    "from top10Hashtags import top_10_hashtags\n",
+    "\n",
+    "def main():\n",
+    "    running = True\n",
+    "    while running:\n",
+    "        print(\"\\nFunciones\")\n",
+    "        print(\"1. Top 10 Retweeted\")\n",
+    "        print(\"2. Top 10 Usuarios\")\n",
+    "        print(\"3. Top 10 Fechas\")\n",
+    "        print(\"4. Top 10 Hashtags\")\n",
+    "        print(\"0. Salir\")\n",
+    "        function_input = input(\"Ingrese el número de la función que desee ejecutar (presione 0 para salir): \")\n",
+    "        if not(function_input in ['0', '1', '2', '3', '4']):\n",
+    "            print(\"\\nIngrese un valor válido\")\n",
+    "        elif function_input == '1':\n",
+    "            top_10 = top_10_retweeted(df)\n",
+    "            print(top_10[['content', 'retweetCount']])\n",
+    "        elif function_input == '2':\n",
+    "            top_10 = top_10_users(tweets)\n",
+    "            print(top_10)\n",
+    "        elif function_input == '3':\n",
+    "            top_10 = top_10_dates(tweets)\n",
+    "            print(top_10)\n",
+    "        elif function_input == '4':\n",
+    "            top_10 = top_10_hashtags(df)\n",
+    "            print(top_10)\n",
+    "        elif function_input == '0':\n",
+    "            running = False\n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pregunta 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -478,14 +619,12 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from top10Retweeted import top_10_retweeted\n",
-    "\n",
     "top_10_retweeted(df)"
    ]
   },
@@ -498,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -595,14 +734,12 @@
        "93313    z_khalique007              1446"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from top10Users import top_10_users\n",
-    "\n",
     "top_10_users(tweets)"
    ]
   },
@@ -615,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -712,14 +849,12 @@
        "10  2021-02-11              5698"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from top10Dates import top_10_dates\n",
-    "\n",
     "top_10_dates(tweets)"
    ]
   },
@@ -743,13 +878,12 @@
        "#farmersprotest               15458\n",
        "#IndianFarmersHumanRights     12019\n",
        "#FarmersAreIndia              11043\n",
-       "                              ...  \n",
-       "#msnbc                            1\n",
-       "#Discordpokemon                   1\n",
-       "#amrindersingh                    1\n",
-       "#WorldIsFamily                    1\n",
-       "#gmbhirisnotgmabhir               1\n",
-       "Name: content, Length: 40776, dtype: int64"
+       "#StandWithFarmers             10645\n",
+       "#Rihanna                       9117\n",
+       "#FarmersProtests               8750\n",
+       "#Farmers                       6561\n",
+       "#shameonbollywood              6270\n",
+       "Name: content, dtype: int64"
       ]
      },
      "execution_count": 6,
@@ -758,8 +892,6 @@
     }
    ],
    "source": [
-    "from top10Hashtags import top_10_hashtags\n",
-    "\n",
     "top_10_hashtags(df)"
    ]
   },
